--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
             </div>
         </section>
     </main>
+<section class="mt-5">
+    <h2>Feedback</h2>
+    <form id="feedback-form" class="row g-3">
+        <div class="col-12">
+            <textarea id="feedback" class="form-control" rows="4" placeholder="Enter your feedback here..." required></textarea>
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-secondary">Submit Feedback</button>
+        </div>
+    </form>
+</section>    
 </body>
 <script src="script.js" type="module"></script>
 </html>
