--- a/index.html
+++ b/index.html
@@ -91,16 +91,21 @@
         </section>
     </main>
 <section class="mt-5">
-    <h2>Feedback</h2>
-    <form id="feedback-form" class="row g-3">
-        <div class="col-12">
-            <textarea id="feedback" class="form-control" rows="4" placeholder="Enter your feedback here..." required></textarea>
+    <div class="card shadow-lg">
+        <div class="card-header bg-primary text-white">
+            <h3 class="mb-0">We Value Your Feedback</h3>
         </div>
-        <div class="col-12">
-            <button type="submit" class="btn btn-secondary">Submit Feedback</button>
+        <div class="card-body">
+            <form id="feedback-form">
+                <div class="mb-3">
+                    <label for="feedback" class="form-label">Your Feedback</label>
+                    <textarea id="feedback" class="form-control" rows="4" placeholder="Enter your feedback here..." required></textarea>
+                </div>
+                <button type="submit" class="btn btn-success w-100">Submit Feedback</button>
+            </form>
         </div>
-    </form>
-</section>    
+    </div>
+</section>   
 </body>
 <script src="script.js" type="module"></script>
 </html>
