--- a/index.html
+++ b/index.html
@@ -6,106 +6,110 @@
     <title>Credit Card Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .d-none {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <header class="bg-primary text-white text-center py-3">
-        <h1>Credit Card Tracker</h1>
-        <p>Manage your credit card points efficiently</p>
-    </header>
-
-    <main class="container my-4">
-        <!-- Form Section -->
-        <section>
-            <h2 class="mb-4">Add a New Card</h2>
-            <form id="card-form" class="row g-3">
-                <div class="col-md-6">
-                    <label for="issuing-bank" class="form-label">Issuing Bank</label>
-                    <input type="text" id="issuing-bank" class="form-control" placeholder="e.g., Axis Bank" required>
-                </div>
-                <div class="col-md-6">
-                    <label for="card-name" class="form-label">Card Name</label>
-                    <input type="text" id="card-name" class="form-control" placeholder="e.g., Magnus" required>
-                </div>
-                <div class="col-md-6">
-                    <label for="card-network" class="form-label">Card Network</label>
-                    <select id="card-network" class="form-select" required>
-                        <option value="" disabled selected>Select Network</option>
-                        <option value="visa">Visa</option>
-                        <option value="mastercard">MasterCard</option>
-                        <option value="rupay">RuPay</option>
-                        <option value="amex">American Express</option>
-                    </select>
-                </div>
-                <div class="col-md-6">
-                    <label for="points-balance" class="form-label">Points Balance</label>
-                    <input type="number" id="points-balance" class="form-control" placeholder="e.g., 5000" required>
-                </div>
-                <div class="col-md-6">
-                    <label for="conversion-options" class="form-label">Conversion Options</label>
-                    <select id="conversion-options" class="form-select" required>
-                        <option value="" disabled selected>Select Conversion Option</option>
-                        <option value="cash">Cash</option>
-                        <option value="marriott-bonvoy">Marriott Bonvoy Points</option>
-                        <option value="air-miles">Air Miles</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-                <div class="col-md-3">
-                    <label for="conversion-factor" class="form-label">Conversion Factor</label>
-                    <input type="number" id="conversion-factor" class="form-control" placeholder="e.g., 1 point = 0.5" step="0.01" required>
-                </div>
-                <div class="col-md-3">
-                    <label for="converted-value" class="form-label">Converted Value</label>
-                    <input type="text" id="converted-value" class="form-control" readonly placeholder="Auto-calculated">
-                </div>
-                <div class="col-12">
-                    <button type="submit" class="btn btn-primary w-100">Add Card</button>
-                </div>
-            </form>
-        </section>
-
-        <!-- Search and Table Section -->
-        <section class="mt-5">
-            <div class="mb-3">
-                <input type="text" id="search-bar" class="form-control" placeholder="Search by bank, card name, or network" oninput="filterTable()">
-            </div>
-            <h2 class="mb-4">Saved Cards</h2>
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered">
-                    <thead class="table-dark">
-                        <tr>
-                            <th onclick="sortTable('issuingBank')">Issuing Bank</th>
-                            <th onclick="sortTable('cardName')">Card Name</th>
-                            <th onclick="sortTable('cardNetwork')">Network</th>
-                            <th onclick="sortTable('pointsBalance')">Points Balance</th>
-                            <th onclick="sortTable('conversionOption')">Conversion Option</th>
-                            <th onclick="sortTable('convertedValue')">Converted Value</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="data-table">
-                        <!-- Data will be dynamically added here -->
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
-<section class="mt-5">
-    <div class="card shadow-lg">
-        <div class="card-header bg-primary text-white">
-            <h3 class="mb-0">We Value Your Feedback</h3>
-        </div>
-        <div class="card-body">
-            <form id="feedback-form">
-                <div class="mb-3">
-                    <label for="feedback" class="form-label">Your Feedback</label>
-                    <textarea id="feedback" class="form-control" rows="4" placeholder="Enter your feedback here..." required></textarea>
-                </div>
-                <button type="submit" class="btn btn-success w-100">Submit Feedback</button>
-            </form>
-        </div>
+    <!-- Login Prompt -->
+    <div id="login-prompt" class="text-center mt-5">
+        <h1>Welcome to Credit Card Tracker</h1>
+        <p>Please log in to access your cards.</p>
+        <button id="login-btn" class="btn btn-primary">Log In</button>
     </div>
-</section>   
+
+    <!-- Main App Content -->
+    <div id="app-content" class="d-none">
+        <header class="bg-primary text-white text-center py-3">
+            <h1>Credit Card Tracker</h1>
+            <p>Manage your credit card points efficiently</p>
+        </header>
+
+        <main class="container my-4">
+            <!-- Logout Button -->
+            <div class="text-end mb-4">
+                <button id="logout-btn" class="btn btn-danger">Log Out</button>
+            </div>
+
+            <!-- Form Section -->
+            <section>
+                <h2 class="mb-4">Add a New Card</h2>
+                <form id="card-form" class="row g-3">
+                    <div class="col-md-6">
+                        <label for="issuing-bank" class="form-label">Issuing Bank</label>
+                        <input type="text" id="issuing-bank" class="form-control" placeholder="e.g., Axis Bank" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="card-name" class="form-label">Card Name</label>
+                        <input type="text" id="card-name" class="form-control" placeholder="e.g., Magnus" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="card-network" class="form-label">Card Network</label>
+                        <select id="card-network" class="form-select" required>
+                            <option value="" disabled selected>Select Network</option>
+                            <option value="visa">Visa</option>
+                            <option value="mastercard">MasterCard</option>
+                            <option value="rupay">RuPay</option>
+                            <option value="amex">American Express</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="points-balance" class="form-label">Points Balance</label>
+                        <input type="number" id="points-balance" class="form-control" placeholder="e.g., 5000" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="conversion-options" class="form-label">Conversion Options</label>
+                        <select id="conversion-options" class="form-select" required>
+                            <option value="" disabled selected>Select Conversion Option</option>
+                            <option value="cash">Cash</option>
+                            <option value="marriott-bonvoy">Marriott Bonvoy Points</option>
+                            <option value="air-miles">Air Miles</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label for="conversion-factor" class="form-label">Conversion Factor</label>
+                        <input type="number" id="conversion-factor" class="form-control" placeholder="e.g., 1 point = 0.5" step="0.01" required>
+                    </div>
+                    <div class="col-md-3">
+                        <label for="converted-value" class="form-label">Converted Value</label>
+                        <input type="text" id="converted-value" class="form-control" readonly placeholder="Auto-calculated">
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary w-100">Add Card</button>
+                    </div>
+                </form>
+            </section>
+
+            <!-- Search and Table Section -->
+            <section class="mt-5">
+                <div class="mb-3">
+                    <input type="text" id="search-bar" class="form-control" placeholder="Search by bank, card name, or network" oninput="filterTable()">
+                </div>
+                <h2 class="mb-4">Saved Cards</h2>
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered">
+                        <thead class="table-dark">
+                            <tr>
+                                <th onclick="sortTable('issuingBank')">Issuing Bank</th>
+                                <th onclick="sortTable('cardName')">Card Name</th>
+                                <th onclick="sortTable('cardNetwork')">Network</th>
+                                <th onclick="sortTable('pointsBalance')">Points Balance</th>
+                                <th onclick="sortTable('conversionOption')">Conversion Option</th>
+                                <th onclick="sortTable('convertedValue')">Converted Value</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="data-table">
+                            <!-- Data will be dynamically added here -->
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 <script src="script.js" type="module"></script>
 </html>
