--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
     <div id="login-prompt" class="text-center mt-5">
         <h1>Welcome to Credit Card Tracker</h1>
         <p>Please log in to access your cards.</p>
-        <button id="login-btn" class="btn btn-primary">Log In with Google</button>
+
+        <!-- Google Login -->
+        <button id="login-btn" class="btn btn-primary mb-3">Log In with Google</button>
+
+        <!-- Email/Password Login -->
+        <div class="mb-3">
+            <input type="email" id="email" class="form-control" placeholder="Email" required>
+            <input type="password" id="password" class="form-control mt-2" placeholder="Password" required>
+        </div>
+        <button id="email-login-btn" class="btn btn-success mb-2">Log In</button>
+        <button id="email-signup-btn" class="btn btn-secondary">Sign Up</button>
     </div>
 
     <!-- Main App Content -->
